<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    
    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        >

        <EditText
            android:id="@+id/search_input"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:background="@drawable/search_edit_bg"
            android:ems="10"
            android:hint="@string/text_hint"
            android:nextFocusDown="@+id/gridView_search"
            android:paddingLeft="5dp"
            android:paddingRight="80dp"
            android:singleLine="true"
            android:textColor="@color/text_white"
            android:textCursorDrawable="@null" >
        </EditText>

        <Button
            android:id="@+id/do_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/select_search"
            android:nextFocusDown="@+id/gridView_search" 
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/msg_search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:text="@string/text_recommend" />

        <RelativeLayout
            android:id="@+id/search_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:visibility="gone"
            >

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/progressBar1"
                android:layout_centerHorizontal="true"
                android:text="@string/text_trying"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>

        <GridView
            android:id="@+id/gridView_search"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:horizontalSpacing="10dp"
            android:listSelector="#00000000"
            android:numColumns="6"
            android:nextFocusDown="@+id/radio4"
            android:verticalSpacing="10dp" 
            android:scrollbars="none"
            
            >
        </GridView>

        <!-- android:listSelector="@drawable/item_back" -->

        <TextView
            android:id="@+id/no_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:text="@string/text_no_result"
            android:layout_marginTop="30dp"
            android:textSize="20dp" />

    </LinearLayout>

</LinearLayout>
