<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="600dp"
    android:layout_height="300dp"
    android:background="@drawable/ticket_background"
    android:orientation="vertical" >



    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/evaluate" 
        android:textSize="22sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/popuIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="60dp"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp" 
                android:textSize="22sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp" >

                <Button
                    android:id="@+id/like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="110dp"
                    android:drawableTop="@drawable/parise_big"
                    android:text="@string/parise" 
                    android:focusableInTouchMode="true"
                    />

                <Button
                    android:id="@+id/hate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="80dp"
                    android:drawableTop="@drawable/reject_big"
                    android:text="@string/reject" 
                    android:focusableInTouchMode="true"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp" >

                <TextView
                    android:id="@+id/praise"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/parise_big" />

                <TextView
                    android:id="@+id/reject"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:gravity="right" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/reject_big" />
            </LinearLayout>

       

        </LinearLayout>

    </LinearLayout>

         <TextView
                android:id="@+id/mess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/ticket_used" 
                android:textSize="20sp"
                />
    
    
</LinearLayout>
